--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-spring/web": "^9.7.3",
     "aos": "^2.3.4",
     "d3": "^7.8.5",
+    "d3-delaunay": "^6.0.4",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18"
