--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "d3": "^7.8.5",
     "d3-delaunay": "^6.0.4",
     "next": "14.1.3",
+    "p5": "^1.9.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-p5": "^1.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
