--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
   "name": "personal-portfolio",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
+  "keywords": [],
+  "author": "Georgiana Barefield (https://github.com/gbaref949)",
+  "license": "MIT",
   "dependencies": {
-    "@react-spring/web": "^9.7.3",
-    "aos": "^2.3.4",
-    "d3": "^7.8.5",
-    "d3-delaunay": "^6.0.4",
-    "next": "14.1.3",
-    "p5": "^1.9.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-p5": "^1.4.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "daisyui": "^4.7.3",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "vite": "^5.1.6"
   }
 }
