--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   "author": "Georgiana Barefield (https://github.com/gbaref949)",
   "license": "MIT",
   "dependencies": {
+    "@react-three/drei": "^9.101.0",
+    "@react-three/fiber": "^8.15.19",
+    "@types/three": "^0.162.0",
+    "leva": "^0.9.35",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
