--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "leva": "^0.9.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "three": "0.153.0"
   },
   "devDependencies": {
