--- a/package.json
+++ b/package.json
@@ -12,19 +12,24 @@
   "author": "Georgiana Barefield (https://github.com/gbaref949)",
   "license": "MIT",
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "@react-three/drei": "9.75.0",
     "@react-three/fiber": "8.13.3",
     "@types/three": "0.152.1",
+    "aos": "^2.3.4",
+    "d3": "^7.8.5",
     "leva": "^0.9.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "tailwindcss": "^1",
     "three": "0.153.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "daisyui": "^4.7.3",
     "vite": "^4.1.0"
   }
 }
