--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "watch:css": "postcss src/styles/global.css"
   },
   "keywords": [],
   "author": "Georgiana Barefield (https://github.com/gbaref949)",
   "license": "MIT",
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@react-spring/web": "^9.7.3",
     "@react-three/drei": "9.75.0",
     "@react-three/fiber": "8.13.3",
@@ -28,7 +31,9 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.18",
     "daisyui": "^4.7.3",
+    "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.1",
     "vite": "^4.1.0"
   }
