--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "watch:css": "postcss src/styles/global.css"
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "Georgiana Barefield (https://github.com/gbaref949)",
@@ -21,7 +20,13 @@
     "@types/three": "0.152.1",
     "aos": "^2.3.4",
     "d3": "^7.8.5",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "leva": "^0.9.35",
+    "lint": "^0.8.19",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
@@ -31,9 +36,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.18",
     "daisyui": "^4.7.3",
-    "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.1",
     "vite": "^4.1.0"
   }
