--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "gh-pages": "^6.1.1",
     "leva": "^0.9.35",
     "lint": "^0.8.19",
+    "maath": "^0.10.7",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "three": "0.153.0"
+    "suspend-react": "^0.1.3",
+    "three": "0.153.0",
+    "wouter": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
