--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@pmndrs/assets": "^1.6.0",
+    "@pmndrs/branding": "^0.0.8",
     "@react-spring/parallax": "^9.7.3",
     "@react-spring/web": "^9.7.3",
-    "@react-three/drei": "9.75.0",
-    "@react-three/fiber": "8.13.3",
-    "@types/three": "0.152.1",
+    "@react-three/drei": "^9.102.6",
+    "@react-three/fiber": "^8.16.0",
+    "@types/three": "^0.162.0",
     "aos": "^2.3.4",
     "d3": "^7.8.5",
     "eslint": "^8.57.0",
