--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "react-scripts": "^5.0.1",
     "suspend-react": "^0.1.3",
     "three": "0.153.0",
+    "uuid-by-string": "^4.0.0",
     "wouter": "^3.1.0"
   },
   "devDependencies": {
