--- a/package.json
+++ b/package.json
@@ -52,5 +52,6 @@
     "daisyui": "^4.7.3",
     "tailwindcss": "^3.4.1",
     "vite": "^4.1.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
